--- a/master/catalog.html
+++ b/master/catalog.html
@@ -14,7 +14,7 @@
     <header class="page-header" data-test="header">
       <nav class="navigation">
         <a class="navigation__logo-link" href="index.html">
-          <img class="navigation__logo" src="images/logo/logo_sedona.svg" alt="Логотип «Седона»" width="140" height="70">
+          <img class="navigation__logo" src="images/logo/logo_sedona.svg" alt="Логотип «Седона»." width="140" height="70">
         </a>
         <ul class="navigation__list">
           <li class="navigation__item">
@@ -31,7 +31,7 @@
         <ul class="navigation__list navigation__user">
           <li class="navigation__item">
             <a class="navigation__link" href="#">
-              <span class="visually-hidden">Поиск</span>
+              <span class="visually-hidden">Поиск.</span>
               <svg class="navigation__icon" width="20" height="20" viewBox="0 0 20 20"  xmlns="http://www.w3.org/2000/svg">
                 <path d="M19.5 18.0083L15.8 14.3287C16.8 13.0359 17.5 11.3453 17.5 9.4558C17.5 5.08011 13.9 1.5 9.5 1.5C5.1 1.5 1.5 5.17956 1.5 9.55525C1.5 13.9309 5.1 17.511 9.5 17.511C11.3 17.511 13 16.9144 14.4 15.8204L18.1 19.5L19.5 18.0083ZM9.5 15.5221C6.2 15.5221 3.5 12.837 3.5 9.55525C3.5 6.27348 6.2 3.5884 9.5 3.5884C12.8 3.5884 15.5 6.27348 15.5 9.55525C15.5 12.837 12.8 15.5221 9.5 15.5221Z" />
               </svg>
@@ -39,7 +39,7 @@
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#">
-              <span class="visually-hidden">Избранное</span>
+              <span class="visually-hidden">Избранное.</span>
               <svg class="navigation__icon" width="20" height="20" viewBox="0 0 20 20"  xmlns="http://www.w3.org/2000/svg">
                 <path d="M9.9 19C9.6 19 9.3 18.9 9.1 18.6C3.7 12.5 2.4 11.1 2.1 10.7C1.4 9.8 1 8.6 1 7.4C1 4.4 3.4 2 6.5 2C7.8 2 9 2.5 10 3.3C11 2.5 12.3 2 13.5 2C16.5 2 19 4.4 19 7.4C19 8.7 18.5 9.9 17.7 10.8L10.7 18.7C10.5 18.9 10.3 19 9.9 19ZM3.9 9.5C4.2 9.9 7.4 13.5 10 16.4L16.2 9.4C16.7 8.9 16.9 8.2 16.9 7.4C16.9 5.6 15.4 4.1 13.6 4.1C12.6 4.1 11.6 4.6 10.9 5.4C10.6 5.7 10.3 5.8 10 5.8C9.7 5.8 9.4 5.6 9.2 5.4C8.5 4.6 7.5 4.1 6.5 4.1C4.7 4.1 3.2 5.6 3.2 7.4C3.1 8.3 3.5 9 3.9 9.5C3.8 9.5 3.8 9.5 3.9 9.5Z" />
               </svg>
@@ -146,7 +146,7 @@
         </form>
       </header>
       <section class="catalog-products">
-        <h2 class="visually-hidden">Список товаров с фильтрами</h2>
+        <h2 class="visually-hidden">Список товаров с фильтрами.</h2>
         <div class="catalog-products__filter">
           <p class="count-hotels">Найдено гостиниц:
             <output name="count-hotels-number">38</output>
@@ -154,26 +154,26 @@
           <select class="select-control" aria-label="Сортировка">
             <option value="popular">Сначала дешёвые</option>
             <option value="cheap">Сначала популярные</option>
-            <option value="expensive">Сначала дорогые</option>
+            <option value="expensive">Сначала дорогие</option>
           </select>
           <div class="catalog-products__button-container">
             <a href="#" class="catalog-products__button catalog-products__button--active">
-            <span class="visually-hidden">Показать обычные карточки</span>
+            <span class="visually-hidden">Показать обычные карточки.</span>
             <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" fill="#000"/></svg>
             </a>
             <a href="#" class="catalog-products__button">
-              <span class="visually-hidden">Показать крупные карточки</span>
+              <span class="visually-hidden">Показать крупные карточки.</span>
               <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z" fill="#000"/></svg>
             </a>
             <a href="#" class="catalog-products__button">
-              <span class="visually-hidden">Показать список</span>
+              <span class="visually-hidden">Показать список.</span>
               <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z" fill="#000"/></svg>
             </a>
           </div>
         </div>
         <ul class="product-list">
           <li class="product-card">
-            <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/amara_resort_spa_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Звёздное небо, вид из пещеры">
+            <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/amara_resort_spa_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Звёздное небо, вид из пещеры.">
               <h3 class="product-card__title">Amara Resort & Spa</h3> </a>
             <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 4000 ₽</span>
             <a class="button button--primary product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -183,12 +183,12 @@
               <span class="product-card__star"></span>
               <span class="product-card__star"></span>
               <span class="product-card__star"></span>
-              <span class="visually-hidden">4 звезды</span>
+              <span class="visually-hidden">4 звезды.</span>
             </div>
             <div class="button product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">8,5</span></div>
           </li>
           <li class="product-card">
-            <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/villas_at_poco_diablo_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Радуга над Гранд-Каньоном">
+            <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/villas_at_poco_diablo_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Радуга над Гранд-Каньоном.">
               <h3 class="product-card__title">Villas at Poco Diablo</h3> </a>
             <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 5000 ₽</span>
             <a class="button button--primary product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -198,12 +198,12 @@
               <span class="product-card__star"></span>
               <span class="product-card__star"></span>
               <span class="product-card__star"></span>
-              <span class="visually-hidden">4 звезды</span>
+              <span class="visually-hidden">4 звезды.</span>
             </div>
             <div class="button product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">9,2</span></div>
           </li>
           <li class="product-card">
-            <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/desert_quail_inn_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Гранд-Каньон в ясную погоду">
+            <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/desert_quail_inn_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Гранд-Каньон в ясную погоду.">
               <h3 class="product-card__title">Desert Quail Inn</h3> </a>
             <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 2500 ₽</span>
             <a class="button button--primary product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -212,12 +212,12 @@
                 <span class="product-card__star"></span>
                 <span class="product-card__star"></span>
                 <span class="product-card__star"></span>
-                <span class="visually-hidden">3 звезды</span>
+                <span class="visually-hidden">3 звезды.</span>
               </div>
               <div class="button product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">6,9</span></div>
           </li>
           <li class="product-card">
-            <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/greentree_inn_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Свет над ночным небом Гранд=Каньона">
+            <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/greentree_inn_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Свет над ночным небом Гранд=Каньона.">
               <h3 class="product-card__title">GreenTree Inn</h3> </a>
             <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 1500 ₽</span>
              <a class="button button--primary product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -225,7 +225,7 @@
               <div class="product-card__stars">
                 <span class="product-card__star"></span>
                 <span class="product-card__star"></span>
-                <span class="visually-hidden">2 звезды</span>
+                <span class="visually-hidden">2 звезды.</span>
               </div>
               <div class="button product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">5,0</span></div>
           </li>
@@ -243,40 +243,41 @@
         <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
         <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
-          <input type="email" name="email" placeholder="Ваш e-mail"><button class="button button--secondary button--subscribe" type="submit">Подписаться</button>
+          <label for="email" class="visually-hidden">Ваш e-mail</label>
+          <input id="email" type="email" name="email" placeholder="Ваш e-mail" required><button class="button button--secondary button--subscribe" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
     <footer class="footer" data-test="footer">
       <section class="footer__social">
-        <h2 class="visually-hidden">Давайте дружить</h2>
+        <h2 class="visually-hidden">Давайте дружить.</h2>
         <ul class="footer__social-list">
           <li class="footer__social-item">
             <a href="#" class="footer__button">
-              <span class="visually-hidden">ВКонтакте</span>
+              <span class="visually-hidden">ВКонтакте.</span>
               <svg class="footer__social-icon" width="25" height="15" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z"/></svg>
             </a>
           </li>
           <li class="footer__social-item">
             <a href="#" class="footer__button">
-              <span class="visually-hidden">Телеграм</span>
+              <span class="visually-hidden">Телеграм.</span>
               <svg class="footer__social-icon" width="18" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" /></svg>
             </a>
           </li>
           <li class="footer__social-item">
             <a href="#" class="footer__button">
-              <span class="visually-hidden">Youtube</span>
+              <span class="visually-hidden">Youtube.</span>
               <svg class="footer__social-icon" width="23" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" /></svg>
             </a>
           </li>
         </ul>
       </section>
       <section class="footer__contacts">
-        <h2 class="visually-hidden">Контактный номер</h2>
+        <h2 class="visually-hidden">Контактный номер.</h2>
         <a class="footer__hotline" href="tel:+7(812)812-12-12">+7 (812) 812-12-12</a>
       </section>
       <section class="footer__production">
-        <h2 class="visually-hidden">Сделано в html academy</h2>
+        <h2 class="visually-hidden">Сделано в html academy.</h2>
         <a class="footer__logo-link" href="https://htmlacademy.ru/">
           <svg class="footer__logo" width="115" height="34" viewBox="0 0 115 34" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_33515_1190)">
